package com.uefs.gerenciadorparabibliotecas.model;
/**
 * GERENCIADOR DE BIBLIOTECA
 * @author Luis Felipe Cunha Silva
 * @author Lucas Lima Rodrigues
 * @version 1.0
 */
/**
 * Enum utilizado para definir as categorias em que um livro pode se enquadrar
 */
public enum CategoriaLivro {
    FICCAO,
    DIDATICO,
    ROMANCE,
    MISTERIO,
    FANTASIA,
    BIOGRAFIA,
    HISTORIA,
    AUTOAJUDA,
    POESIA,
    OUTRA,
}
