package com.uefs.gerenciadorparabibliotecas.model;

/**
 * Enum utilizado para demarcar automaticamente a localização de um livro
 */
public enum LocalizacaoLivro {
    alaA,
    alaB,
    alaC,
    alaD,
    alaE,
    alaF,
    alaG,

}
