@startuml PBL_JAVA

abstract class Pessoa{
    -nome: String
    -endereco: String
    -telefone: String
    -id: Integer
    -senha: String
}

class Leitor {
    -leitorBanido: Boolean
    -diasdeMulta: int
    -dataDoFimDaMulta: LocalDate
    -historicoEmprestimos: List<Emprestimo>
}

class Bibliotecario{

}

class Administrador{

}

abstract class Funcionario{

}

class Livro{
    -título: String
    -autor: String
    -editora: String
    -isbn: String
    -anoDePublicação: String
    -categoria: CategoriaLivro
    -localização: LocalizaçãoLivro
    -statusReserva: Boolean
    -livroID: int
    -disponibilidade: boolean
    -numeroDeEmpréstimos: Integer
}

class Emprestimo{
    -emprestimoID: int
    -dataEmprestimo: LocalDate
    -dataDevolucaoEsperada: LocalDate
    -mutuario: Usuario
    -livroEmprestado: Livro
    -atraso: int
    -naoDevolvido: boolean
    -numeroDeRenovações: Integer
    -dataDevolvidoFinal: LocalDate
    +estenderEmprestimo(objeto: Emprestimo) : void
    +calcularAtraso(objeto: Emprestimo, LocalDate data) : int
    +calcularMulta(Objeto: Empréstimo, LocalDate data) : int
    +aplicarMulta(Objeto: Empréstimo, LocalDate data) : void
    +finalizarEmpréstimo(Objeto: Emprestimo, LocalDate data) : void
    +verificacao(Objeto: Emprestimo): boolean
}

class Reserva{
    -reservaID: Integer
    -livroReservado: Livro
    -Leitor: Leitor
}

enum CategoriaLivro{
    FICCAO
    DIDATICO
    ROMANCE
    MISTERIO
    FANTASIA
    BIOGRAFIA
    HISTORIA
    AUTOAJUDA
    POESIA
    OUTRA
}

enum LocalizacaoLivro{
    alaA
    alaB
    alaC
    alaD
    alaE
    alaF
    alaG
}

Emprestimo --> Livro : usa
Emprestimo --> Leitor : usa

Reserva --> Livro : usa
Reserva --> Leitor : usa
Livro --> CategoriaLivro : usa
Livro --> LocalizacaoLivro : usa

Emprestimo "1"--"1" Leitor
Reserva "1"--"1" Leitor

Funcionario <|-- Bibliotecario : é um
Funcionario <|-- Administrador : é um
Funcionario <|-- Pessoa : é um
Pessoa <|-- Leitor : é um

@enduml